--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1215,6 +1215,48 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         }
       }
     }
+    &.sh14 {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .shape {
+        width: 35%;
+        height: 50%;
+        margin-left: 5px;
+        &:nth-child(1) {
+          margin-left: 0;
+        }
+        &:nth-child(2) {
+         width: 25%;
+         height: 100%;
+        }
+      }
+    }
+    &.sh15 {
+      display: flex;
+      justify-content: space-between;
+      .shape {
+        width: 27%;
+        margin-left: 5px;
+        &:nth-child(1) {
+          margin-left: 0;
+        }
+        &:nth-child(2) {
+         width: 70%;
+        }
+      }
+    }
+    &.sh16 {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .shape {
+        width: 23%;
+        &:nth-child(1), &:nth-child(4) {
+          height: 50%;
+        }
+      }
+    }
   }
   .tm-book {
     width: 100%;
