--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1257,6 +1257,23 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         }
       }
     }
+    &.sh17 {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      .shape {
+        width: 23%;
+        &:nth-child(1) {
+          height: 50%;
+        }
+        &:nth-child(2) {
+          height: 65%;
+        }
+        &:nth-child(3) {
+          height: 85%;
+        }
+      }
+    }
   }
   .tm-book {
     width: 100%;
