added tooltip size to show block dimention

--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10334,6 +10334,7 @@ h6 {
   align-items: flex-start;
   align-content: flex-start;
   justify-content: center;
+  margin-top: -1px;
 }
 #constructor .item.sh11 .sh-wrap .shape {
   width: 43%;
