--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1155,6 +1155,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
         align-items: flex-start;
         align-content: flex-start;
         justify-content: center;
+        margin-top: -1px;
         .shape{
           width: 43%;
           height: 47%;
