--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1980,6 +1980,7 @@ input:disabled, select:disabled {
     } 
   }
   .tm-modal-pics {
+    min-height: 300px;
     .tm-preview-cont {
       position: relative;
       img {
@@ -1992,6 +1993,66 @@ input:disabled, select:disabled {
         /* top: 0; */
         z-index: 20;
         border: 10px solid  #495057;
+      }
+    }
+  }
+  #pagination-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    ul {
+        list-style-type: none;
+        float: left;
+        margin: 0;
+        padding: 0;
+      li {
+        float: left;
+        border: 1px solid #aaa;
+        border-right: none;
+        list-style: none;
+        &.active {
+          border: none;
+        &>a {
+          height: 30px;
+          line-height: 30px;
+          background: #aaa;
+          color: #fff;
+          &:hover {
+            background: #aaa;
+            cursor: text;
+          }
+        }
+        }
+        &.disabled>a {
+          opacity: .3;
+        }
+        &:first-child {
+          border-radius: 3px 0 0 3px;
+        }
+        &:first-child>a {
+          border-radius: 3px 0 0 3px;
+        }
+        &:last-child {
+          border-right: 1px solid #aaa;
+          border-radius: 0 3px 3px 0;
+        }
+        &:last-child>a {
+            border-radius: 0 3px 3px 0;
+        }
+        a {
+          min-width: 30px;
+          height: 28px;
+          line-height: 28px;
+          display: block;
+          background: #fff;
+          font-size: 14px;
+          color: #333;
+          text-decoration: none;
+          text-align: center;
+          &:hover {
+            background: #eee;
+          }
+        }
       }
     }
   }
