--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -1998,6 +1998,13 @@ input:disabled, select:disabled {
         border: 10px solid  #495057;
       }
     }
+    .js-nores {
+      font-size: 30px;
+      font-weight: 300;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+    }
   }
   #pagination-container {
     display: flex;
@@ -2049,10 +2056,11 @@ input:disabled, select:disabled {
           display: block;
           background: #fff;
           font-size: 14px;
-          color: #333;
+          color: #426ec7;
           text-decoration: none;
           text-align: center;
           padding: 0 5px;
+          font-weight: 600;
           &:hover {
             background: #81a1e0;
           }
