--- a/wp-develop/wp-content/themes/astamart/astam-paintings-style.less
+++ b/wp-develop/wp-content/themes/astamart/astam-paintings-style.less
@@ -1284,7 +1284,7 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     border: none;
     background: #ea3d07;
     border-radius: 5px;
-    font-size: 28px;
+    font-size: 22px;
     font-family: 'RobotoLight', sans-serif;
     cursor: pointer;
     outline: none;
@@ -1296,6 +1296,29 @@ body, p, span, a, li, td, h1, h2, h3, h4, h5, h6 {
     }
     &:disabled {
       background: rgba(255, 61, 0, .6);
+      cursor: not-allowed;
+    }
+  }
+  .js-custom-save-pic {
+    width: 100%;
+    height: 60px;
+    text-transform: uppercase;
+    color: #fff;
+    border: none;
+    background: green;
+    border-radius: 5px;
+    font-size: 22px;
+    font-family: 'RobotoLight', sans-serif;
+    cursor: pointer;
+    outline: none;
+    &:hover {
+      background: rgba(0, 128, 0, 0.8);
+    }
+    &:active {  
+      background: rgba(0, 128, 0, 0.5);
+    }
+    &:disabled {
+      background: rgba(0, 128, 0, 0.5);
       cursor: not-allowed;
     }
   }
@@ -1520,7 +1543,29 @@ input:disabled, select:disabled {
     border: none !important;
     box-shadow: inset 1px 1px 10px #333;
   }
-  
+    .js-tt-check {
+      display: none;
+      position: absolute;
+      background: #333;
+      border-radius: 3px;
+      right: 50px;
+      top: 113px;
+      color: #fff;
+      align-items: center;
+      padding: 10px;
+      &:after {
+        content: '';
+        position: absolute;
+        right: -10px;
+        top: 10px;
+        border-left: 10px solid #333;
+        border-top: 10px solid transparent;
+        border-bottom: 10px solid transparent;
+      }
+      -moz-animation:bounce 2s infinite;
+      -webkit-animation:bounce 2s infinite;
+      animation:bounce 2s infinite;
+    }
     .tm-canv-icon {
       display: none;
       position: absolute;
@@ -2392,7 +2437,15 @@ input:disabled, select:disabled {
     }
     /* SEC 8 end */
 
-}/* Global end */
+}
+.remove-item button {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}  
+/* Global end */
 
 /* Inner Page End */
 
@@ -2618,6 +2671,9 @@ input:disabled, select:disabled {
       font-size: 12px;
     }
   }
+  .tm-total-sum {
+    font-size: 24px;
+  }
 }
 @media screen and (max-width: 370px) {
   .tm-header-topbox .tm-header-topbox-contacts {
@@ -2636,4 +2692,20 @@ input:disabled, select:disabled {
   .tm-header-topbox .tm-header-topbox-cart a .tm-header-topbox-cart-info {
     font-size: 9px;
   }
+}
+
+@-webkit-keyframes bounce{
+  0%,100%,20%,50%,80% {-webkit-transform:translateX(0);transform:translateX(0)}
+  40% {-webkit-transform:translateX(-5px);transform:translateX(-5px)}
+  60% {-webkit-transform:translateX(-2px);transform:translateX(-2px)}
+}
+@-moz-keyframes bounce{
+  0%,100%,20%,50%,80% {-moz-transform:translateX(0);transform:translateX(0)}
+  40% {-moz-transform:translateX(-5px);transform:translateX(-5px)}
+  60% {-moz-transform:translateX(-2px);transform:translateX(-2px)}
+}
+@keyframes bounce{
+  0%,100%,20%,50%,80% {transform:translateX(0);transform:translateX(0)}
+  40% {transform:translateX(-5px);transform:translateX(-5px)}
+  60% {transform:translateX(-2px);transform:translateX(-2px)}
 }
