poster dimentions are shown

--- a/uikit-2.27.4/astam-paintings-style.less
+++ b/uikit-2.27.4/astam-paintings-style.less
@@ -2106,7 +2106,20 @@ input:disabled, select:disabled {
 .rangeSlider__fill {
   background: #acb1b0;
 }
+
+.tm-poster-dim {
+  .tm-poster {
+    padding: 5px 0;
+    .tm-output {
+      font-weight: bold;
+      color: #426ec7;
+      font-size: 20px;
+    }
+  }
+}
 /* Range End */
+
+
 
 /* Inner Page Start */
 
