--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -11239,6 +11239,14 @@ select:disabled {
 .rangeSlider__fill {
   background: #acb1b0;
 }
+.tm-poster-dim .tm-poster {
+  padding: 5px 0;
+}
+.tm-poster-dim .tm-poster .tm-output {
+  font-weight: bold;
+  color: #426ec7;
+  font-size: 20px;
+}
 /* Range End */
 /* Inner Page Start */
 .tm-global-wrap {
